crates/tsuno-driver/tests/fixtures/snapshots/pass/assumes_false_prunes_following_assertion.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS assumes_false_prunes_following_assertion
  all assertions discharged
PASS main
  all assertions discharged

stderr:
