crates/tsuno-driver/tests/fixtures/snapshots/pass/branch_merge_explosion.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS branch_merge_explosion
  all assertions discharged

stderr:
