crates/tsuno-driver/tests/fixtures/snapshots/pass/dangles_projected_move_mutable_reference.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS dangles_projected_move_mutable_reference
  all assertions discharged
PASS main
  all assertions discharged

stderr:
