crates/tsuno-driver/tests/fixtures/snapshots/pass/external_spec_root_contract.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 89
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS external_specified
  all assertions discharged
PASS main
  all assertions discharged

stderr:
