crates/tsuno-driver/tests/fixtures/snapshots/pass/function_contracts_before_body.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS caller
  all assertions discharged
PASS callee
  all assertions discharged
PASS main
  all assertions discharged

stderr:
