crates/tsuno-driver/tests/fixtures/snapshots/pass/infers_ref_spec_var_across_contract.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS read_ref
  all assertions discharged
PASS main
  all assertions discharged

stderr:
