crates/tsuno-driver/tests/fixtures/snapshots/pass/let_directive_has_block_scope.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS let_directive_has_block_scope
  all assertions discharged
PASS main
  all assertions discharged

stderr:
