crates/tsuno-driver/tests/fixtures/snapshots/pass/let_directives_bind_contract_and_body.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS let_directives_bind_contract_and_body
  all assertions discharged
PASS main
  all assertions discharged

stderr:
