crates/tsuno-driver/tests/fixtures/snapshots/pass/pointer_allocation_alignment.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS aligned_local_pointer_addr
  all assertions discharged
PASS main
  all assertions discharged

stderr:
