crates/tsuno-driver/tests/fixtures/snapshots/pass/pointer_layout_offsets.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS repr_c_field_offsets
  all assertions discharged
PASS nested_field_offsets
  all assertions discharged
PASS deref_base_field_offsets
  all assertions discharged
PASS main
  all assertions discharged

stderr:
